--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethers": "^5.4.4",
     "hardhat": "^2.6.0",
     "hardhat-gas-reporter": "^1.0.4",
+    "mocha": "^10.0.0",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18"
   },
