--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.5",
     "dotenv": "^10.0.0",
     "hardhat-contract-sizer": "^2.0.3",
+    "polygongovernance": "github:tellor-io/governance#360",
     "solidity-coverage": "^0.7.17",
+    "tellorflex": "github:tellor-io/tellorFlex#360",
     "usingtellor": "github:tellor-io/usingtellor#360audit",
     "web3": "^1.5.1"
   }
